--- a/notebooks/explorer.ipynb
+++ b/notebooks/explorer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "str"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        " 'Filial': 'Filial 7'}"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        " 'Filial': 'Filial 8'}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "list"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "dict"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "'Nome do Item,Classificação do Produto,Valor em Reais (R$),Quantidade em Estoque,Nome da Loja,Data da Venda\\n'"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "'L'"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        " 'Data da Venda']"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "list"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "list"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "7"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "'62'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -6399,7 +6399,7 @@
        " ...]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6410,7 +6410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -6424,7 +6424,7 @@
        " 'Data da Venda': '2023-04-13 18:58:06.794203'}"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6435,7 +6435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -6448,7 +6448,7 @@
        " 'Filial': 'Filial 7'}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6456,6 +6456,275 @@
    "source": [
     "data_json[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Nome do Produto',\n",
+       " 'Categoria do Produto',\n",
+       " 'Preço do Produto (R$)',\n",
+       " 'Quantidade em Estoque',\n",
+       " 'Filial']"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_name_json = list(data_json[0].keys())\n",
+    "column_name_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(column_name_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Nome do Item',\n",
+       " 'Classificação do Produto',\n",
+       " 'Valor em Reais (R$)',\n",
+       " 'Quantidade em Estoque',\n",
+       " 'Nome da Loja',\n",
+       " 'Data da Venda']"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_name_csv = list(data_csv[0].keys())\n",
+    "column_name_csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(column_name_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Nome do Item': 'Nome do Produto',\n",
+       " 'Classificação do Produto': 'Categoria do Produto',\n",
+       " 'Valor em Reais (R$)': 'Preço do Produto (R$)',\n",
+       " 'Quantidade em Estoque': 'Quantidade em Estoque',\n",
+       " 'Nome da Loja': 'Filial',\n",
+       " 'Data da Venda': 'Data da Venda'}"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key_mapping = {'Nome do Item': 'Nome do Produto',\n",
+    "                'Classificação do Produto': 'Categoria do Produto',\n",
+    "                'Valor em Reais (R$)': 'Preço do Produto (R$)',\n",
+    "                'Quantidade em Estoque': 'Quantidade em Estoque',\n",
+    "                'Nome da Loja': 'Filial',\n",
+    "                'Data da Venda': 'Data da Venda'}\n",
+    "key_mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Nome do Produto': 'Lápis de sobrancelha',\n",
+       " 'Categoria do Produto': 'Roupas',\n",
+       " 'Preço do Produto (R$)': '55.17',\n",
+       " 'Quantidade em Estoque': '62',\n",
+       " 'Filial': 'Filial 1',\n",
+       " 'Data da Venda': '2023-04-13 18:58:06.794203'}"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data_csv = []\n",
+    "\n",
+    "for old_dict in data_csv:\n",
+    "    dict_temp = {}\n",
+    "    for old_key, value in old_dict.items():\n",
+    "        dict_temp[key_mapping[old_key]] = value\n",
+    "    new_data_csv.append(dict_temp)\n",
+    "\n",
+    "new_data_csv[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4446"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data_json) + len(new_data_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4446"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_list = []\n",
+    "combined_list.extend(data_json)\n",
+    "combined_list.extend(new_data_csv)\n",
+    "\n",
+    "len(combined_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Nome do Produto': 'Sombra de olhos',\n",
+       " 'Categoria do Produto': 'Eletrônicos',\n",
+       " 'Preço do Produto (R$)': '41.73',\n",
+       " 'Quantidade em Estoque': '5',\n",
+       " 'Filial': 'Filial 6',\n",
+       " 'Data da Venda': '2022-11-21 18:58:06.794203'}"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data_csv[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_names  = list(combined_list[0].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "I/O operation on closed file.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/nnkfrnds/dev/pipeline_data/notebooks/explorer.ipynb Cell 36\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nnkfrnds/dev/pipeline_data/notebooks/explorer.ipynb#X53sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     writer\u001b[39m.\u001b[39mwriteheader()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nnkfrnds/dev/pipeline_data/notebooks/explorer.ipynb#X53sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m combined_list:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nnkfrnds/dev/pipeline_data/notebooks/explorer.ipynb#X53sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     writer\u001b[39m.\u001b[39;49mwriterow(row)\n",
+      "File \u001b[0;32m/usr/lib/python3.11/csv.py:154\u001b[0m, in \u001b[0;36mDictWriter.writerow\u001b[0;34m(self, rowdict)\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwriterow\u001b[39m(\u001b[39mself\u001b[39m, rowdict):\n\u001b[0;32m--> 154\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwriter\u001b[39m.\u001b[39;49mwriterow(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dict_to_list(rowdict))\n",
+      "\u001b[0;31mValueError\u001b[0m: I/O operation on closed file."
+     ]
+    }
+   ],
+   "source": [
+    "path_combinned_data = '../data_processed/combined_data.csv'\n",
+    "\n",
+    "with open(path_combinned_data, 'w') as file:\n",
+    "    writer = csv.DictWriter(file, fieldnames=column_names)\n",
+    "    writer.writeheader()\n",
+    "\n",
+    "for row in combined_list:\n",
+    "    writer.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
